# lwutil

./: CHANGELOG.md  CMakeLists.txt  library.json
.github/workflows/: build-and-test.yml
dev/: main.c
docs/: conf.py
lwutil/src/include/lwutil/: lwutil.h
lwutil/src/lwutil/: lwutil.c
tests/: CMakeLists.txt  test.h  test_main.c
tests/test_full/: cmake.cmake  test_full.c  test_parse_standard.c
